gitops/clusters/oci-a1/auth/auth-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth
spec:
  template:
    spec:
      containers:
      - name: auth-service
        resources:
          limits:
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
