gitops/clusters/oci-a1/auth/auth-ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ui
  namespace: auth
spec:
  template:
    spec:
      containers:
      - name: auth-ui
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
