gitops/clusters/oci-a1/auth/auth-worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-worker
  namespace: auth
spec:
  template:
    spec:
      containers:
      - name: auth-worker
        resources:
          limits:
            memory: 384Mi
          requests:
            cpu: 10m
            memory: 128Mi
