gitops/clusters/oci-a1/auth/auth-ui-destination.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '10'
  name: auth-ui
  namespace: istio-system
spec:
  exportTo:
  - .
  host: auth-ui.auth.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  workloadSelector:
    matchLabels:
      app: istio-ingress
